force-app/main/default/objects/Collateral_Assessment__c/Collateral_Assessment__c.object-meta.xml
<CustomObject>
    <label>Collateral Assessment</label>
    <pluralLabel>Collateral Assessments</pluralLabel>
    <nameField>
        <displayFormat>CASS-{0000}</displayFormat>
        <label>Collateral Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks assessments and valuations of collateral items</description>
</CustomObject>