force-app/main/default/objects/Collateral_Assessment__c/fields/Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Date__c</fullName>
    <label>Assessment Date</label>
    <type>Date</type>
    <description>Date when the assessment was performed</description>
</CustomField>