force-app/main/default/objects/Collateral_Assessment__c/fields/Assessment_Value__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Value__c</fullName>
    <label>Assessment Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Assessed value of the collateral</description>
</CustomField>