force-app/main/default/objects/Collateral_Assessment__c/fields/Assessor__c.field-meta.xml
<CustomField>
    <fullName>Assessor__c</fullName>
    <label>Assessor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Collateral_Assessments</relationshipName>
    <type>Lookup</type>
    <description>User who performed the assessment</description>
</CustomField>