force-app/main/default/objects/Collateral_Assessment__c/fields/Collateral__c.field-meta.xml
<CustomField>
    <fullName>Collateral__c</fullName>
    <label>Collateral</label>
    <referenceTo>Collateral__c</referenceTo>
    <relationshipLabel>Collateral Assessments</relationshipLabel>
    <relationshipName>Collateral_Assessments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <required>true</required>
    <type>MasterDetail</type>
    <description>Master-Detail to Collateral</description>
</CustomField>